fixed gallery flex items going out of bounds

--- a/css/styleM.css
+++ b/css/styleM.css
@@ -669,7 +669,7 @@ body {
 	padding-left: 0px;
 	gap: 17.5px;
 	flex-direction: column;
-	height: 4250px;
+	height: 5000px;
 	margin-top: 25px;
 }
 
